--- a/index.html
+++ b/index.html
@@ -1518,7 +1518,7 @@
           />
         </div>
         <div class="intro-parent">
-          <h1 class="head">Plot</h1>
+          <h1 class="head"></h1>
           <img src="yensplash 2024 finaal.png" style="width: 13cm; z-index: 999;">
           <div class="draw-line"><div class="draw-line-inner"></div></div>
         </div>
