--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html
 <!-- This site was created in Webflow. http://www.webflow.com --><!-- Last Published: Wed Sep 04 2019 08:28:41 GMT+0000 (UTC) -->
 <html
   data-wf-domain="the-goonies.webflow.io"
