--- a/index.html
+++ b/index.html
@@ -2621,5 +2621,11 @@
         alert("Copied the text: " + copyText.value);
       }
     </script>
+    <style>
+  .w-webflow-badge {
+    display: none !important;
+  }
+</style>
+
   </body>
 </html>
