--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
           ></div>
         </li>
         <li>
-          <a href="#goonies" class="nav-link">Splash</a>
+          <a href="#splash1" class="nav-link">Splash</a>
           <div class="pulse-dot-0"></div>
         </li>
         <li>
@@ -1253,6 +1253,7 @@
     <div
       data-w-id="e40cd887-efbb-e533-6d53-9cf55e3f5f95"
       class="text-block-parent"
+      id="splash1"
     >
       <div class="copy-link"><h1 class="head">Fragments of Fresco</h1></div>
       <img
@@ -1396,7 +1397,7 @@
                   "
                   class="img-head-3 a-p"
                 >
-                  DAY1
+                  Day1
                 </h2>
               </div>
             </div>
