--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
           ></div>
         </li>
         <li>
-          <a href="#splash1" class="nav-link">Splash</a>
+          <a href="#goonies" class="nav-link">Splash</a>
           <div class="pulse-dot-0"></div>
         </li>
         <li>
@@ -1191,7 +1191,7 @@
           class="bg-scroll"
         ></div>
         <div class="bg-main"></div>
-        <div class="hero-parent">
+        <div class="hero-parent" >
           <div
             data-w-id="d71726fa-8aba-407f-0581-2d6e6f566dc1"
             style="opacity: 0"
@@ -1253,7 +1253,6 @@
     <div
       data-w-id="e40cd887-efbb-e533-6d53-9cf55e3f5f95"
       class="text-block-parent"
-      id="splash1"
     >
       <div class="copy-link"><h1 class="head">Fragments of Fresco</h1></div>
       <img
@@ -1367,7 +1366,16 @@
             class="grid-parent b"
           >
             <div class="grid-postion">
-              <div class="text-hide-parent">
+              <div class="text-hide-parent" id="day1">
+                <style>
+                  #day1{
+                    width: 190px;
+                    text-align: center;
+                    @media (max-width: 992px){
+                      width: 155px;
+                    }
+                  }
+                </style>
                 <h2
                   data-w-id="4c5e52a5-ee6b-7dd9-4979-1af244309703"
                   style="
@@ -1396,8 +1404,9 @@
                       rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
                   "
                   class="img-head-3 a-p"
+                  id="days"
                 >
-                  Day1
+                  THE BEGINING
                 </h2>
               </div>
             </div>
@@ -1470,7 +1479,16 @@
             class="grid-parent b"
           >
             <div class="grid-postion border-top">
-              <div class="text-hide-parent">
+              <div class="text-hide-parent" id="day2">
+                <style>
+                  #day2{
+                    width: 139px;
+                    text-align: center;
+                    @media (max-width: 992px){
+                      width: 113px;
+                    }
+                  }
+                </style>
                 <h2
                   data-w-id="4c5e52a5-ee6b-7dd9-4979-1af244309703"
                   style="
@@ -1499,8 +1517,9 @@
                       rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
                   "
                   class="img-head-3 a-p"
+                  id="days"
                 >
-                  DAY2
+                  THE RAISE
                 </h2>
               </div>
             </div>
@@ -1606,7 +1625,16 @@
             class="grid-parent b"
           >
             <div class="grid-postion">
-              <div class="text-hide-parent">
+              <div class="text-hide-parent" id="day3">
+                <style>
+                  #day3{
+                    width: 230px;
+                    text-align: center;
+                    @media (max-width: 992px){
+                      width: 187px;
+                    }
+                  }
+                </style>
                 <h2
                   data-w-id="4c5e52a5-ee6b-7dd9-4979-1af244309703"
                   style="
@@ -1635,8 +1663,9 @@
                       rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
                   "
                   class="img-head-3 a-p"
+                  id="days"
                 >
-                  DAY3
+                  THE CORONATION
                 </h2>
               </div>
             </div>
@@ -1711,6 +1740,14 @@
       .grid-parent
        {
   border: 0.1px solid rgba(114, 114, 114, 0.507); /* Solid white border on all sides */
+}
+#days{
+  font-size: 20px;
+  text-align: center;
+  @media (max-width: 992px){
+    font-size: 15px;
+  }
+
 }
 
     </style>
