--- a/index.html
+++ b/index.html
@@ -1066,22 +1066,22 @@
     >
       <ul class="list-2 w-list-unstyled">
         <li>
-          <a href="#plot" class="nav-link">Home</a>
+          <a href="#plot" class="nav-link" style="font-family: Astaghfirulloh Demo;">Home</a>
           <div
             data-w-id="380458e8-6729-dc53-c2a0-baaea17db24c"
             class="pulse-dot-menu"
           ></div>
         </li>
         <li>
-          <a href="#goonies" class="nav-link">Splash</a>
+          <a href="#coin" class="nav-link" style="font-family: Astaghfirulloh Demo;">Splash</a>
           <div class="pulse-dot-0"></div>
         </li>
         <li>
-          <a href="#credits" class="nav-link">Events</a>
+          <a href="#credits" class="nav-link" style="font-family: Astaghfirulloh Demo;">Events</a>
           <div class="pulse-dot-0"></div>
         </li>
         <li>
-          <a href="#gallery" class="nav-link">Gallery</a>
+          <a href="#gallery" class="nav-link" style="font-family: Astaghfirulloh Demo;">Gallery</a>
           <div class="pulse-dot-0"></div>
         </li>
       </ul>
@@ -1188,16 +1188,16 @@
         ></div>
         <div
           data-w-id="a46d1827-5165-1246-fde5-5a8b3a359089"
-          class="bg-scroll"
+          class="bg-scroll" style="background-image: url(danny-howe-bn-D2bCvpik-unsplash.jpg);"
         ></div>
         <div class="bg-main"></div>
-        <div class="hero-parent" >
+        <div class="hero-parent" style="background-image: url(wp3190189.jpg);">
           <div
             data-w-id="d71726fa-8aba-407f-0581-2d6e6f566dc1"
             style="opacity: 0"
             class="sub-title"
           >
-            <p class="astaf">YENSPLASH</p>
+            <p class="astaf" >YENSPLASH</p>
             <style>
               .sub-title{
                 font-size: 150px;
@@ -1253,6 +1253,7 @@
     <div
       data-w-id="e40cd887-efbb-e533-6d53-9cf55e3f5f95"
       class="text-block-parent"
+      id="coin"
     >
       <div class="copy-link"><h1 class="head">Fragments of Fresco</h1></div>
       <img
@@ -1282,6 +1283,7 @@
         class="coin-1"
       />
     </div>
+    <div style="height: 400px;height: 400px; display: flex; justify-content: center; align-items: center;"><p style="font-family: Astaghfirulloh Demo; text-align: center; font-size: 35px; color: rgba(103, 72, 0, 0.53);">LETS PARTY</p></div>
     <div id="credits" class="scroll-container-2">
       <div class="sticky-container-2">
         <div
