--- a/index.html
+++ b/index.html
@@ -1188,16 +1188,17 @@
         ></div>
         <div
           data-w-id="a46d1827-5165-1246-fde5-5a8b3a359089"
-          class="bg-scroll" style="background-image: url(danny-howe-bn-D2bCvpik-unsplash.jpg);"
+          class="bg-scroll"
+          style="background-color: rgb(255, 0, 0);"
         ></div>
         <div class="bg-main"></div>
-        <div class="hero-parent" style="background-image: url(wp3190189.jpg);">
+        <div class="hero-parent">
           <div
             data-w-id="d71726fa-8aba-407f-0581-2d6e6f566dc1"
             style="opacity: 0"
             class="sub-title"
           >
-            <p class="astaf" >YENSPLASH</p>
+            <p class="astaf">YENSPLASH</p>
             <style>
               .sub-title{
                 font-size: 150px;
@@ -1231,7 +1232,7 @@
           </div>
           
         </div>
-        <div class="intro-parent">
+        <div class="intro-parent" style="background-color: rgb(0, 0, 0);">
           <h1 class="head"></h1>
           <img src="yensplash 2024 finaal.png" style="width: 13cm; z-index: 999;">
           <div class="draw-line"><div class="draw-line-inner"></div></div>
@@ -1870,7 +1871,7 @@
           </div>
           <div class="w-layout-grid grid-2">
             <div
-              id="w-node-181ddbe74743-b4a9d5ce"
+              id="photo1"
               style="
                 -webkit-transform: translate3d(0, 0, 0) scale3d(0.2, 0.2, 1)
                   rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
@@ -1881,6 +1882,7 @@
                 transform: translate3d(0, 0, 0) scale3d(0.2, 0.2, 1) rotateX(0)
                   rotateY(0) rotateZ(0) skew(0, 0);
                 opacity: 0;
+                background: url();
               "
               class="g-3"
             ></div>
