--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,17 @@
           </div>
           
         </div>
-        <div class="intro-parent" style="background-color: rgb(0, 0, 0);">
+        <div class="intro-parent">
+          <style>
+            .intro-parent {
+    background-image: url('danny-howe-bn-D2bCvpik-unsplash.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh;
+  }
+          </style>
           <h1 class="head"></h1>
           <img src="yensplash 2024 finaal.png" style="width: 13cm; z-index: 999;">
           <div class="draw-line"><div class="draw-line-inner"></div></div>
