--- a/index.html
+++ b/index.html
@@ -1189,7 +1189,7 @@
         <div
           data-w-id="a46d1827-5165-1246-fde5-5a8b3a359089"
           class="bg-scroll"
-          style="background-color: rgb(255, 0, 0);"
+          style="background-image: url(dannybg.jpg);"
         ></div>
         <div class="bg-main"></div>
         <div class="hero-parent">
@@ -1233,6 +1233,7 @@
           
         </div>
         <div class="intro-parent">
+          <div class="overlay-bg"></div>
           <style>
             .intro-parent {
     background-image: url('danny-howe-bn-D2bCvpik-unsplash.jpg');
@@ -1241,6 +1242,14 @@
     background-repeat: no-repeat;
     width: 100vw;
     height: 100vh;
+  }
+  .overlay-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.658); /* Adjust the opacity (0.5 for semi-transparent) */
   }
           </style>
           <h1 class="head"></h1>
