--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <meta charset="utf-8" />
     <title>Yensplash2k24</title>
     <meta
-      content="A group of young misfits who call themselves The Goonies discover an ancient map and set out on a quest to find a legendary pirate&#x27;s long-lost treasure."
+      content="Yensplash 2k24 Yenapoya Institute of Technology"
       name="description"
     />
     <meta content="Home - The Goonies" property="og:title" />
     <meta
-      content="A group of young misfits who call themselves The Goonies discover an ancient map and set out on a quest to find a legendary pirate&#x27;s long-lost treasure."
+      content="Yensplash2k24"
       property="og:description"
     />
     <meta content="summary" name="twitter:card" />
