--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html
-<!-- This site was created in Webflow. http://www.webflow.com --><!-- Last Published: Wed Sep 04 2019 08:28:41 GMT+0000 (UTC) -->
+<!DOCTYPE html>
 <html
   data-wf-domain="the-goonies.webflow.io"
   data-wf-page="5d547d82782f476bb4a9d5ce"
@@ -12,13 +11,11 @@
     <meta charset="utf-8" />
     <title>Yensplash2k24</title>
     <meta
-      content="A group of young misfits who call themselves The Goonies discover an ancient map and set out on a quest to find a legendary pirate&#x27;s long-lost treasure."
-      name="description"
+      content="Yensplash2k24
     />
-    <meta content="Home - The Goonies" property="og:title" />
+    <meta content="Home - Yensplash" property="og:title" />
     <meta
-      content="A group of young misfits who call themselves The Goonies discover an ancient map and set out on a quest to find a legendary pirate&#x27;s long-lost treasure."
-      property="og:description"
+      content="Welcome to Yensplash"
     />
     <meta content="summary" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -1296,14 +1293,14 @@
         width="152"
         alt=""
         class="coin-2"
-      /><img
+      /><img 
         src="https://uploads-ssl.webflow.com/5cff83ac2044e22cb8cf2f11/5d25ce8103e41038cf3b4be7_coin-1.png"
         width="119"
         alt=""
         class="coin-1"
       />
     </div>
-    <div style="height: 400px;height: 400px; display: flex; justify-content: center; align-items: center;"><p style="font-family: Astaghfirulloh Demo; text-align: center; font-size: 35px; color: rgba(103, 72, 0, 0.7);">LETS PARTY</p></div>
+    <div style="height: 400px;height: 400px; display: flex; justify-content: center; align-items: center;"><p style="font-family: Astaghfirulloh Demo; text-align: center; font-size: 35px; color: rgba(103, 72, 0, 0.65);">LETS PARTY</p></div>
     <div id="credits" class="scroll-container-2">
       <div class="sticky-container-2">
         <div
