--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!DOCTYPE html
+<!-- This site was created in Webflow. http://www.webflow.com --><!-- Last Published: Wed Sep 04 2019 08:28:41 GMT+0000 (UTC) -->
 <html
   data-wf-domain="the-goonies.webflow.io"
   data-wf-page="5d547d82782f476bb4a9d5ce"
@@ -11,11 +12,13 @@
     <meta charset="utf-8" />
     <title>Yensplash2k24</title>
     <meta
-      content="Yensplash2k24
+      content="A group of young misfits who call themselves The Goonies discover an ancient map and set out on a quest to find a legendary pirate&#x27;s long-lost treasure."
+      name="description"
     />
-    <meta content="Home - Yensplash" property="og:title" />
+    <meta content="Home - The Goonies" property="og:title" />
     <meta
-      content="Welcome to Yensplash"
+      content="A group of young misfits who call themselves The Goonies discover an ancient map and set out on a quest to find a legendary pirate&#x27;s long-lost treasure."
+      property="og:description"
     />
     <meta content="summary" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -1293,14 +1296,14 @@
         width="152"
         alt=""
         class="coin-2"
-      /><img 
+      /><img
         src="https://uploads-ssl.webflow.com/5cff83ac2044e22cb8cf2f11/5d25ce8103e41038cf3b4be7_coin-1.png"
         width="119"
         alt=""
         class="coin-1"
       />
     </div>
-    <div style="height: 400px;height: 400px; display: flex; justify-content: center; align-items: center;"><p style="font-family: Astaghfirulloh Demo; text-align: center; font-size: 35px; color: rgba(103, 72, 0, 0.65);">LETS PARTY</p></div>
+    <div style="height: 400px;height: 400px; display: flex; justify-content: center; align-items: center;"><p style="font-family: Astaghfirulloh Demo; text-align: center; font-size: 35px; color: rgba(103, 72, 0, 0.703);">LETS PARTY</p></div>
     <div id="credits" class="scroll-container-2">
       <div class="sticky-container-2">
         <div
@@ -1385,6 +1388,58 @@
             class="grid-parent b"
           >
             <div class="grid-postion">
+              <div class="text-hide-parent" id="registration">
+                <style>
+                  #registration{
+                    width: 195px;
+                    text-align: center;
+                    @media (max-width: 992px){
+                      width: 155px;
+                    }
+                  }
+                </style>
+                <h3
+                  data-w-id="4c5e52a5-ee6b-7dd9-4979-1af244309703"
+                  style="
+                    -webkit-transform: translate3d(0, 0%, 0) scale3d(1, 1, 1)
+                      rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                    -moz-transform: translate3d(0, 0%, 0) scale3d(1, 1, 1)
+                      rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                    -ms-transform: translate3d(0, 0%, 0) scale3d(1, 1, 1)
+                      rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                    transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0)
+                      rotateY(0) rotateZ(0) skew(0, 0);
+                  "
+                  class="img-head-3"
+                  id="days"
+                >
+                  REGISTRATION
+                </h3>
+                <h2
+                  style="
+                    -webkit-transform: translate3d(0, 0px, 0) scale3d(1, 1, 1)
+                      rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                    -moz-transform: translate3d(0, 0px, 0) scale3d(1, 1, 1)
+                      rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                    -ms-transform: translate3d(0, 0px, 0) scale3d(1, 1, 1)
+                      rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                    transform: translate3d(0, 0px, 0) scale3d(1, 1, 1)
+                      rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                  "
+                  class="img-head-3 a-p"
+                  id="days"
+                >
+                  &nbsp;&nbsp;&nbsp;&nbsp;<a href="http://orinoco.netlify.app" style="cursor: pointer;">CLICK HERE</a>
+                </h2>
+              </div>
+            </div>
+            </div>
+          <div
+            id="w-node-14687a4002a2-b4a9d5ce"
+            data-w-id="ee9860da-b6ce-796b-b682-14687a4002a2"
+            class="grid-parent b"
+          >
+            <div class="grid-postion">
               <div class="text-hide-parent" id="day1">
                 <style>
                   #day1{
@@ -1430,38 +1485,37 @@
               </div>
             </div>
             </div>
-          <div
-            id="nav-two"
-            data-w-id="1c167c3d-709a-4095-70e4-61bf2a7e7cdd"
-            class="grid-parent b w-node-61bf2a7e7cdd-b4a9d5ce"
+            <div
+            id="w-node-57b857f37702-b4a9d5ce"
+            data-w-id="0a951ad5-7c67-5931-b624-57b857f37702"
+            class="grid-parent no-b-1"
           >
-            <div id="nav-two" class="grid-postion-full">
+            <div class="grid-postion-top">
               <img
                 src="farewell.jpg"
                 srcset="
                 yensplash 2024 finaal.png 500w,
-                yensplash 2024 finaal.png       647w
+                yensplash 2024 finaal.png 800w,
+                yensplash 2024 finaal.png        872w
                 "
-                sizes="(max-width: 479px) 99vw, (max-width: 767px) 250px, 320px"
+                sizes="(max-width: 479px) 90vw, (max-width: 767px) 89vw, (max-width: 958px) 91vw, 872px"
                 style="
-                width: 80%;
-                height: 100%;
+                  -webkit-transform: translate3d(0, -100vh, 0) scale3d(1, 1, 1)
+                    rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                  -moz-transform: translate3d(0, -100vh, 0) scale3d(1, 1, 1)
+                    rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                  -ms-transform: translate3d(0, -100vh, 0) scale3d(1, 1, 1)
+                    rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                  transform: translate3d(0, -100vh, 0) scale3d(1, 1, 1)
+                    rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
                   opacity: 0.3;
-                  -webkit-transform: translate3d(0, 101%, 0) scale3d(1, 1, 1)
-                    rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                  -moz-transform: translate3d(0, 101%, 0) scale3d(1, 1, 1)
-                    rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                  -ms-transform: translate3d(0, 101%, 0) scale3d(1, 1, 1)
-                    rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                  transform: translate3d(0, 101%, 0) scale3d(1, 1, 1) rotateX(0)
-                    rotateY(0) rotateZ(0) skew(0, 0);
                 "
                 alt=""
-                class="sloth"
+                class="dave"
               />
             </div>
             <h3
-              data-w-id="1c167c3d-709a-4095-70e4-61bf2a7e7ce1"
+              data-w-id="0a951ad5-7c67-5931-b624-57b857f37705"
               style="
                 -webkit-transform: translate3d(0, 150px, 0) scale3d(1, 1, 1)
                   rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
@@ -1473,25 +1527,25 @@
                   rotateY(0) rotateZ(0) skew(0, 0);
               "
             >
-              Farewell batch2k24
-            </h3>
-            <div
-              data-w-id="1c167c3d-709a-4095-70e4-61bf2a7e7ce3"
-              style="
-                -webkit-transform: translate3d(0, 150px, 0) scale3d(1, 1, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                -moz-transform: translate3d(0, 150px, 0) scale3d(1, 1, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                -ms-transform: translate3d(0, 150px, 0) scale3d(1, 1, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                transform: translate3d(0, 150px, 0) scale3d(1, 1, 1) rotateX(0)
-                  rotateY(0) rotateZ(0) skew(0, 0);
-              "
-              class="info-txt"
-            >
-              Autoexpo<br>flashmob<br>jam-session
+            Farewell to the batch of 2024
+              </h3>
+              <div
+                data-w-id="bde65c49-3eeb-3873-bb0b-461dac42d3df"
+                style="
+                  -webkit-transform: translate3d(0, 150px, 0) scale3d(1, 1, 1)
+                    rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                  -moz-transform: translate3d(0, 150px, 0) scale3d(1, 1, 1)
+                    rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                  -ms-transform: translate3d(0, 150px, 0) scale3d(1, 1, 1)
+                    rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
+                  transform: translate3d(0, 150px, 0) scale3d(1, 1, 1) rotateX(0)
+                    rotateY(0) rotateZ(0) skew(0, 0);
+                "
+                class="info-txt"
+              >
+              Auto expo<br>Flash mob Dance<br>Jam Session
+              </div>
             </div>
-          </div>
           <div
             id="w-node-14687a4002a2-b4a9d5ce"
             data-w-id="ee9860da-b6ce-796b-b682-14687a4002a2"
