--- a/index.html
+++ b/index.html
@@ -1429,7 +1429,7 @@
                   class="img-head-3 a-p"
                   id="days"
                 >
-                  &nbsp;&nbsp;&nbsp;&nbsp;<a href="http://orinoco.netlify.app" style="cursor: pointer;">CLICK HERE</a>
+                  &nbsp;&nbsp;&nbsp;&nbsp;<a href="/registration.html" style="cursor: pointer;">CLICK HERE</a>
                 </h2>
               </div>
             </div>
