--- a/registration.html
+++ b/registration.html
@@ -146,6 +146,26 @@
             background-image: url('/yensplash\ 2024\ finaal.png');
         }
         /* Add more classes for other cards as needed */
+
+        @media screen and (max-width: 768px) {
+            .card {
+                width: calc(100% - 20px); /* Full width for each card on smaller screens */
+                margin-bottom: 20px; /* Add space between cards */
+            }
+        }
+
+        .card1 {
+            background-image: url('/yensplash\ 2024\ finaal.png');
+        }
+
+        .card2 {
+            background-image: url('/yensplash\ 2024\ finaal.png');
+        }
+
+        .card3 {
+            background-image: url('/yensplash\ 2024\ finaal.png');
+        }
+
     </style>
 </head>
 <body>
