--- a/registration.html
+++ b/registration.html
@@ -165,6 +165,7 @@
         .card3 {
             background-image: url('/yensplash\ 2024\ finaal.png');
         }
+        
 
     </style>
 </head>
@@ -173,70 +174,70 @@
     <div class="close-button">
         <a href="index.html">&times;</a>
     </div>
-    <div class="card card1">
+    <div class="card card1" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card2">
+    <div class="card card2" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card3">
+    <div class="card card3"onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card4">
+    <div class="card card4" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card5">
+    <div class="card card5" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card6">
+    <div class="card card6" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card7">
+    <div class="card card7"onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card8">
+    <div class="card card8" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card9">
+    <div class="card card9" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card10">
+    <div class="card card10" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card11">
+    <div class="card card11" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card12">
+    <div class="card card12" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card13">
+    <div class="card card13"onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card14">
+    <div class="card card14" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card15">
+    <div class="card card15" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card16">
+    <div class="card card16" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card17">
+    <div class="card card17" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card18">
+    <div class="card card18" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card19">
+    <div class="card card19" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card20">
+    <div class="card card20" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card21">
+    <div class="card card21" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
-    <div class="card card22">
+    <div class="card card22" onclick="window.location.href = 'https://google.com';">
         <p></p>
     </div>
     <!-- Add more cards as needed -->
