--- a/registration.html
+++ b/registration.html
@@ -8,7 +8,7 @@
         body {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
+            justify-content: space-around;
             background-color: black;
             gap: 0.4px;
             padding: 1px;
@@ -19,6 +19,7 @@
             aspect-ratio: 1/1;
             background-color: #000000;
             display: flex;
+            margin-bottom: 0.5cm;
             justify-content: center;
             align-items: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -26,7 +27,7 @@
             background-repeat: no-repeat;
             background-position: center;
             position: relative;
-            transition: transform 0.3s; /* Smooth transition for hover effect */
+             
             border-style: solid;
             border-color: #8b8b8b99;
             border-width: 0.1px;
@@ -63,109 +64,110 @@
             font-weight: 900;
         }
         .card1 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/reel\ \(2\).jpg');
 
         }
 
         .card2 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/photography.jpg');
         }
 
         .card3 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/mehandi.jpg');
         }
 
         .card4 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/rangoli.jpg');
         }
 
         .card5 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/debate.jpg');
         }
         .card6 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/pencil.jpg');
         }
         .card7 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/facepaint.jpg');
         }
 
         .card8 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/jazzoff.jpg');
         }
 
         .card9 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/reel.jpg');
         }
 
         .card10 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/anime.png');
         }
 
         .card11 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/drama.jpg');
         }
 
         .card12 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/pushup1.jpg');
         }
 
         .card13 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/penalty.jpg');
         }
 
 
         .card14 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/cooking.jpg');
         }
 
         .card15 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/treasure.jpg');
         }
 
         .card16 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/quiz.jpg');
         }
 
         .card17 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/reel.jpg');
         }
         .card18 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/reel.jpg');
         }
 
         .card19 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/reel.jpg');
         }
         .card20 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/reel.jpg');
         }
         .card21 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/reel.jpg');
         }
         .card22 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/reel.jpg');
         }
         .card23 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/reel.jpg');
         }
         .card24 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/reel.jpg');
         }
         .card25 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/reel.jpg');
         }
         .card26 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/reel.jpg');
         }
         .card27 {
-            background-image: url('matadorea.png');
+            background-image: url('/regimages/reel.jpg');
         }
         
 
         @media screen and (max-width: 768px) {
             .card {
                 width: calc(50% - 20px); /* Full width for each card on smaller screens */
-                margin-bottom: 1px; /* Add space between cards */
+                margin-bottom: 20px; /* Add space between cards */
+                border-radius: 5%;
             }
         }
         .card p{
