--- a/registration.html
+++ b/registration.html
@@ -15,23 +15,30 @@
         }
 
         .card {
-            width: calc(25% - 20px); /* 25% minus the gap between cards */
-            aspect-ratio: 1/1;
-            background-color: #000000;
-            display: flex;
-            margin-bottom: 0.5cm;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            position: relative;
-             
-            border-style: solid;
-            border-color: #8b8b8b99;
-            border-width: 0.1px;
-        }
+    width: calc(25% - 20px); /* 25% minus the gap between cards */
+    aspect-ratio: 1/1;
+    background-color: #000000;
+    display: flex;
+    margin-bottom: 0.5cm;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+    border-radius: 5%;
+    border-style: solid;
+    border-color: #8b8b8b99;
+    border-width: 0.1px;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.card:hover {
+    transform: scale(1.05) translateY(-10px); /* Scale up and move up slightly */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
 
 
         .card1 {
@@ -95,7 +102,7 @@
         }
 
         .card9 {
-            background-image: url('/regimages/reel.jpg');
+            background-image: url('/regimages/extempore.jpg');
         }
 
         .card10 {
@@ -128,38 +135,38 @@
         }
 
         .card17 {
-            background-image: url('/regimages/reel.jpg');
+            background-image: url('/regimages/dposter.jpg');
         }
         .card18 {
-            background-image: url('/regimages/reel.jpg');
+            background-image: url('/regimages/bgmi.jpg');
         }
 
         .card19 {
-            background-image: url('/regimages/reel.jpg');
+            background-image: url('/regimages/pes.jpg');
         }
         .card20 {
-            background-image: url('/regimages/reel.jpg');
+            background-image: url('/regimages/lagori.jpeg');
         }
         .card21 {
-            background-image: url('/regimages/reel.jpg');
+            background-image: url('/regimages/solo\ dance.jpg');
         }
         .card22 {
-            background-image: url('/regimages/reel.jpg');
+            background-image: url('/regimages/groupdance.jpg');
         }
         .card23 {
-            background-image: url('/regimages/reel.jpg');
+            background-image: url('/regimages/solosing.jpg');
         }
         .card24 {
-            background-image: url('/regimages/reel.jpg');
+            background-image: url('/regimages/duetsong.jpg');
         }
         .card25 {
-            background-image: url('/regimages/reel.jpg');
+            background-image: url('/regimages/rampwalk.jpg');
         }
         .card26 {
-            background-image: url('/regimages/reel.jpg');
+            background-image: url('/regimages/bands.jpg');
         }
         .card27 {
-            background-image: url('/regimages/reel.jpg');
+            background-image: url('/regimages/variety.jpg');
         }
         
 
