--- a/index.html
+++ b/index.html
@@ -1342,6 +1342,7 @@
                       rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
                     transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0)
                       rotateY(0) rotateZ(0) skew(0, 0);
+                      color:"RED";
                   "
                   class="img-head-3"
                   id="days"
@@ -1362,7 +1363,7 @@
                   class="img-head-3 a-p"
                   id="days"
                 >
-                  &nbsp;&nbsp;&nbsp;&nbsp;<a href="registration.html" style="cursor: pointer;">CLICK HERE</a>
+                  &nbsp;&nbsp;&nbsp;&nbsp;<a href="registration.html" style="cursor: pointer; color:"red";>CLICK HERE</a>
                 </h2>
               </div>
             </div>
