--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html
-<!-- This site was created in Webflow. http://www.webflow.com --><!-- Last Published: Wed Sep 04 2019 08:28:41 GMT+0000 (UTC) -->
+<!DOCTYPE html>
 <html
   data-wf-domain="the-goonies.webflow.io"
   data-wf-page="5d547d82782f476bb4a9d5ce"
@@ -1342,6 +1341,7 @@
                       rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
                     transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0)
                       rotateY(0) rotateZ(0) skew(0, 0);
+                      color: red;
                   "
                   class="img-head-3"
                   id="days"
@@ -1362,7 +1362,7 @@
                   class="img-head-3 a-p"
                   id="days"
                 >
-                  &nbsp;&nbsp;&nbsp;&nbsp;<a href="registration.html" style="cursor: pointer; color:red;>CLICK HERE</a>
+                  &nbsp;&nbsp;&nbsp;&nbsp;<a href="registration.html" style="cursor: pointer; color: red;">CLICK HERE</a>
                 </h2>
               </div>
             </div>
