--- a/index.html
+++ b/index.html
@@ -2091,7 +2091,7 @@
         Created By
         <a href="http://orinoco.netlify.app" target="_blank" style="color: red;">Orinoco</a><br>
         <a href="http://instagram.com/thejass_krishna" target="_blank"><i class="fab fa-instagram" style="color: #E1306C"></i> Thejaskrishna</a><br>
-        <a href="http://instagram.com/shebz.___" target="_blank">&nbsp&nbsp&nbsp<i class="fab fa-instagram" style="color: #E1306C;"></i> Muhammed Shebin</a>
+        <a href="http://instagram.com/shebz.___" target="_blank">&nbsp&nbsp&nbsp<i class="fab fa-instagram" style="color: #E1306C;"></i> Mohammed Shebin</a>
     </div>
       <div class="copy-link">
         <div data-w-id="69f8d244-cd04-10ba-5df4-1dd3ff46c661" class="info-txt">
