--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html
-  data-wf-domain="the-goonies.webflow.io"
+  
   data-wf-page="5d547d82782f476bb4a9d5ce"
   data-wf-site="5cff83ac2044e22cb8cf2f11"
   
@@ -11,13 +11,11 @@
     <meta charset="utf-8" />
     <title>Yensplash2k24</title>
     <meta
-      content="A group of young misfits who call themselves The Goonies discover an ancient map and set out on a quest to find a legendary pirate&#x27;s long-lost treasure."
-      name="description"
+      content="Welcome to Yensplash"
     />
-    <meta content="Home - The Goonies" property="og:title" />
+    <meta content="Home - Yensplash" property="og:title" />
     <meta
-      content="A group of young misfits who call themselves The Goonies discover an ancient map and set out on a quest to find a legendary pirate&#x27;s long-lost treasure."
-      property="og:description"
+      content="Welcome to Yensplash"
     />
     <meta content="summary" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
