--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <meta charset="utf-8" />
     <title>Yensplash2k24</title>
     <meta
-      content="Welcome to Yensplash"
+      content="Yensplash2k24"
+      name="description"
     />
-    <meta content="Home - Yensplash" property="og:title" />
+    <meta content="Home - The yensplash" property="og:title" />
+    <meta property="og:image" content="/yensplash 2024 finaal.png">
     <meta
-      content="Welcome to Yensplash"
+      content="Yensplash2k24."
+      property="og:description"
     />
     <meta content="summary" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
