--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
       type="image/x-icon"
     />
     <link
-      href="https://uploads-ssl.webflow.com/5cff83ac2044e22cb8cf2f11/5d29850fe06f4c1b4e9a52ca_Goonies-lg.jpg"
+      href="/yensplash 2024 finaal.png"
       rel="apple-touch-icon"
     />
     <style>
