--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html
-  
   data-wf-page="5d547d82782f476bb4a9d5ce"
   data-wf-site="5cff83ac2044e22cb8cf2f11"
   
@@ -15,7 +14,7 @@
       name="description"
     />
     <meta content="Home - The yensplash" property="og:title" />
-    <meta property="og:image" content="/yensplash 2024 finaal.png">
+    <meta property="og:image" content="https://orinoco.netlify.app">
     <meta
       content="Yensplash2k24."
       property="og:description"
@@ -1280,7 +1279,7 @@
                   "
                   class="img-head-3 a-p"
                 >
-                  2024
+                  MAY
                 </h2>
               </div>
             </div>
@@ -1462,7 +1461,7 @@
                   rotateY(0) rotateZ(0) skew(0, 0);
               "
             >
-            Farewell to the batch of 2024
+            Farewell to the batch of 2020
               </h3>
               <div
                 data-w-id="bde65c49-3eeb-3873-bb0b-461dac42d3df"
@@ -2092,8 +2091,9 @@
         Created By
         <a href="http://orinoco.netlify.app" target="_blank" style="color: red;">Orinoco</a><br>
         <a href="http://instagram.com/thejass_krishna" target="_blank"><i class="fab fa-instagram" style="color: #E1306C"></i> Thejaskrishna</a><br>
-        <a href="http://instagram.com/shebz.___" target="_blank">&nbsp&nbsp&nbsp<i class="fab fa-instagram" style="color: #E1306C;"></i> Mohammed Shebin</a>
-    </div>
+        <a href="http://instagram.com/shebz.___" target="_blank">&nbsp&nbsp&nbsp<i class="fab fa-instagram" style="color: #E1306C;"></i> Muhammed Shebin</a>
+    </div>    
+  
       <div class="copy-link">
         <div data-w-id="69f8d244-cd04-10ba-5df4-1dd3ff46c661" class="info-txt">
           Share Your Experience
