--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       content="Yensplash2k24"
       name="description"
     />
-    <meta content="Home - Yensplash" property="og:title" />
+    <meta content="Home - YENSPLASH" property="og:title" />
     <meta property="og:image" content="https://images.search.yahoo.com/search/images;_ylt=AwrOqqqngidmCAQA1AtXNyoA;_ylu=Y29sbwNncTEEcG9zAzEEdnRpZAMEc2VjA3Nj?type=E210US885G0&p=yensplash+icon&fr=mcafee&th=355&tw=474&imgurl=https%3A%2F%2Fi.ytimg.com%2Fvi%2FLTS5swP493g%2Fhqdefault.jpg&rurl=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DLTS5swP493g&size=8KB&name=Yensplash+-+YouTube&oid=1&h=360&w=480&turl=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.7Uaz9o0YTsOhyB53xhBM_wHaFj%26pid%3DApi&tt=Yensplash+-+YouTube&sigr=u2BTKbVLnypZ&sigit=NYhOzTfa1xqN&sigi=9gkcWJfaNYHD&sign=ncA970q8TDQN&sigt=ncA970q8TDQN">
     <meta
       content="Yensplash2k24."
